[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "als-perturb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.10",
    "helical>=1.12.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.2.2",
    "scanpy>=1.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.11",
]
